# tx_parse

./: .gitignore  .npmignore  AGENT.md  AGENTS.md  CLAUDE.md  README.md  package.json  vite.config.ts
.github/workflows/: README.md  publish.yml
docs/: overview.md
fixtures/: transaction_block.json
rust/: Cargo.toml  README.md
rust/examples/: test_mainnet.rs
rust/src/: client.rs  lib.rs  parse.rs  types.rs  utils.rs
src/: client.ts  type.ts  utils.ts
tests/: parse.test.ts
ts/: package.json  test-mainnet.ts  vite.config.ts
ts/src/: client.ts  index.ts  parse.ts  type.ts  utils.ts
ts/tests/: parse.test.ts
