[package]
name = "tx_parse"
version = "0.1.0"
edition = "2021"
description = "Parse Sui transaction blocks to extract balance changes and gas usage"
authors = ["suiz"]
license = "MIT"

[lib]
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
httpmock = "0.7"
